# petsc4simnibs

./: meson.build  pyproject.toml
.github/workflows/: main_linux.yml
petsc4simnibs/: __init__.py  _solver.c  logging.py  meson.build  solver.pyx
petsc4simnibs/tests/: test_solver.py
