[project]
name = "PETSc4SimNIBS"
# authors = [
#   {name = "SimNIBS developers", email = "support@simnibs.org" } # Optional
# ]
# maintainers = [
#   {name = "SimNIBS developers", email = "support@simnibs.org" }
# ]
license = {text = "GPL3"}
description = "PETSc solver for SimNIBS"
# long_description = file: README.md
# long_description_content_type = text/markdown
# dynamic = ["version"]
# version=open("simnibs/_version.py").readlines()[-1].split()[-1].strip("\"'"),
version = "0.1"
requires-python = ">=3.11"

dependencies =[
    "numpy < 2",
]

# [project.urls]  # Optional
# "Homepage" = "simnibs.org"
# "Bug Reports" = "https://github.com/simnibs/simnibs/issues"
# "Source" = "https://github.com/simnibs/simnibs/"

[build-system]
# requires = ['setuptools>=68', 'wheel', 'build', 'numpy', 'cython']
build-backend = "mesonpy"
requires = [
    "meson-python >= 0.16",
    "cython >= 3.0",
    # `wheel` is needed for non-isolated builds, given that `meson-python`
    # doesn't list it as a runtime requirement (at least in 0.5.0)
    "wheel >= 0.41",
    "numpy < 1.26",
]


# [tool.setuptools]
# zip-safe = false
# include-package-data = true

# [tool.setuptools.packages.find]
# where = ["."]
# exclude = ["packing"]

# [tool.setuptools_scm]
# version_file = "simnibs/_version.py"
# git_describe_command = "git describe --tags --abbrev=0"

[project.optional-dependencies]
test =[
    "pytest",
]
